# qasm-mlir-compiler

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
docs/: grammar.md
include/Dialect/: Passes.h  Quantum.td  QuantumDialect.h
include/Frontend/: AST.h  Lexer.h  MLIRGen.h  Parser.h
lib/Dialect/: CancelInversePass.cpp  NoCloningVerifierPass.cpp  QuantumDialect.cpp
lib/Frontend/: AST.cpp  Lexer.cpp  MLIRGen.cpp  Parser.cpp
tests/Dialect/: cloning_error.mlir  invalid_type.mlir  valid.mlir
tests/Frontend/inputs/invalid/: invalid_1.qasm  invalid_2.qasm  invalid_3.qasm  invalid_4.qasm  invalid_5.qasm  invalid_6.qasm  lexical_invalid_identifier.qasm  lexical_unterminated_string.qasm  semantic_index_out_of_bounds.qasm  semantic_invalid_measure_target.qasm  semantic_undeclared_register.qasm  syntax_missing_semicolon.qasm
tests/Frontend/inputs/valid/: basic_circuit.qasm  cnot_custom_names.qasm  comprehensive.qasm  rotations.qasm  teleportation_core.qasm  valid_1.qasm  valid_2.qasm  valid_3.qasm  valid_4.qasm  valid_5.qasm
tests/MLIRGen/: chained_cx.qasm  chained_h.qasm  empty_program.qasm  measure.qasm  multiple_registers.qasm  symbolic_rotations.qasm  unary_gates.qasm  verify_diagnostics.qasm
tests/Optimization/: cancel_cxcx.mlir  cancel_hh.mlir  cancel_mixed.mlir  cancel_xx.mlir  cancel_yy.mlir  cancel_zz.mlir  negative_nocancel.mlir
tools/qparse/: qparse.cpp
tools/quantum-opt/: quantum-opt.cpp
